# eodhp-web-presence

./: .dockerignore  .eslintrc.js  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .stylelintrc  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.pg  Dockerfile.static  LICENSE  Makefile  README.md  biome.json  compile_css.sh  conftest.py  database_dump_pg.py  database_load_pg.py  docker-compose.dev.yaml  docker-compose.yaml  docker_deploy.sh  entrypoint.sh  example.env  manage.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_migrations.sh  webpack.config.js  webpack.config.mjs
.github/: renovate.json
.github/workflows/: .bandit  actions.yaml  docker-image-to-aws-ecr.yaml  docker.yaml  dockerhub.yaml  lint.yml  linter.yaml  pre-commit.yml  security.yaml  unit-tests.yaml
assets/: entrypoint.js  entrypoint.mjs
assets/admin/icon-field/: icon-field.scss  index.js
assets/admin/icon-picker/: decorator.js  icon-picker.scss  icons.js  index.js  modal.js  source.js
assets/fake-catalogue/: fake-catalogue.scss  index.js  map.js
assets/fake-projects/: fake-projects.scss  index.js
assets/js/: breadcrumbs.js  case_carousel.js  hero_carousel.js  menu.js  notification_banner.js  support.js  topics_filter.js  version.js
assets/js/pages/: accounts.js  home.js
assets/placeholders/: README.md  workspaces.js
assets/scss/: _theme-colors.scss  custom.scss  fira.scss  footer.scss  home.scss  main.scss  menu.scss
assets/scss/components/: _image-modifiers.scss  accordion.scss  block_layout.scss  button.scss  callout.scss  case_carousel.scss  cta_block.scss  embed_block.scss  grid_layout.scss  image_block.scss  mdi_icon.scss  more_link.scss  notification_banner.scss  quote_block.scss  (+1 more)
eodhp_web_presence/: conftest.py  database_dump.py  database_dump_all.py  database_dump_pg.py  database_load.py  database_load_all.py  database_load_pg.py  db.sqlite3  manage.py  pytest.ini
eodhp_web_presence/accounts/: backend.py  backends.py  middleware.py  tokens.py  urls.py  views.py
eodhp_web_presence/auth/: __init__.py
eodhp_web_presence/catalogue/: models.py  urls.py  views.py
eodhp_web_presence/core/: context_processors.py  middleware.py  robots.py  urls.py  wagtail_hooks.py
eodhp_web_presence/eodhp_web_presence/: authenticated.py  context_processors.py  robots.py  settings.py  urls.py  wsgi.py
eodhp_web_presence/help/: models.py
eodhp_web_presence/home/: blocks.py  colors.py  icons.py  mdi.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
eodhp_website/: manage.py  requirements-dev.txt
eodhp_website/eodhp_website/: urls.py  wsgi.py
eodhp_website/help/: models.py  urls.py  views.py  wagtail_hooks.py
eodhp_website/home/: utils.py
scripts/: build_mdi_icons.mjs
static/: package-lock.json
(+208 files in other folders)
