[project]
name = "eodhp-website"
dynamic = ["version"]

description = "Wagtail-based website for EODHP"
readme = "README.md"

requires-python = ">=3.14,<3.15"

license = { file = "LICENSE" }

authors = [
  { name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" },
]

maintainers = [
  { name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "Django>=5.2.12",
  "wagtail>=7.3.1",
  "psycopg2-binary",
  "django-environ",
  "whitenoise",
  "django-sass",
  "wagtail-cache",
  "django-webpack-loader",
  "boto3",
  "django-storages",
  "pyjwt",
  "jinja2>=3.1.4",
  "wagtailcodeblock>=1.29.0.2",
  "gunicorn",
  "gevent",
  "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
  "pre-commit",
  "pyright",
  "pytest",
  "pytest-django",
  "pytest-mock",
  "pytest-watcher",
  "pytest-xdist",
  "ruff",
  "validate-pyproject",
  "gibberish",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/eodhp-web-presence"
repository = "https://github.com/EO-DataHub/eodhp-web-presence"
changelog = "https://github.com/EO-DataHub/eodhp-web-presence/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
DJANGO_SETTINGS_MODULE = "eodhp_web_presence.settings"
pythonpath = ["eodhp_web_presence"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008",   # function call in default argument (incompatible with FastAPI)
    "PT009",  # unittest-style assertions (Django TestCase uses these)
    "RUF005", # iterable unpacking instead of concatenation (standard Django pattern)
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["ANN", "RUF012"]
"**/tests/*.py" = ["ANN"]
"**/test_*.py" = ["ANN"]
"**/settings.py" = ["SIM105", "F403"]
